# evoann

./: Cargo.toml  README.MD
data/: 2Qm.csv  2Qm1.csv  Coxs10.csv  Coxs2.csv  Coxs_convergenceTrnd_EO.csv  Coxs_data_5000.csv  Coxs_dataset_learn_results_EO.csv  Coxs_dataset_test_results_EO.csv  HL_10_All_results.csv  HL_10_Psize80_Coxs_convergenceTrnd_EO.csv  HL_10_Psize80_Coxs_dataset_learn_results.csv  HL_10_Psize80_Coxs_dataset_test_results.csv  HL_5_All_results.csv  HL_5_Psize80_Coxs_convergenceTrnd_EO.csv  HL_5_Psize80_Coxs_dataset_learn_results.csv  HL_5_Psize80_Coxs_dataset_test_results.csv  data.csv  dataset.csv  dataset_convergenceTrnd.csv  dataset_convergenceTrnd_EO.csv  dataset_learn_results_EO.csv  dataset_test_results.csv  dataset_test_results_EO.csv  result_HL11_.csv  result_p100_ANNstruct[7, 11, 1]_.csv  result_p30_ANNstruct[7, 11, 1]_.csv  result_p50_ANNstruct[7, 11, 1]_.csv  result_p70_ANNstruct[7, 11, 1]_.csv
data_old/: Coxs.csv  Coxs3.csv  Coxs3_mis_inputs.csv  Psize100_Coxs3_Outputs.csv  Psize100_Coxs_convergenceTrnd_EO.csv  Psize100_Coxs_dataset_learn_results_EO.csv  Psize100_Coxs_dataset_test_results_EO.csv  Psize120_Coxs3_Outputs.csv  Psize120_Coxs_convergenceTrnd_EO.csv  Psize120_Coxs_dataset_learn_results_EO.csv  Psize120_Coxs_dataset_test_results_EO.csv  Psize50_Coxs3_Outputs.csv  Psize50_Coxs_convergenceTrnd_EO.csv  Psize50_Coxs_dataset_learn_results_EO.csv  Psize50_Coxs_dataset_test_results_EO.csv  Psize80_Coxs3_Outputs.csv  Psize80_Coxs_convergenceTrnd_EO.csv  Psize80_Coxs_dataset_learn_results_EO.csv  Psize80_Coxs_dataset_test_results_EO.csv  (+2 more)
(+47 files in other folders)
