[package]
name = "evoann"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
csv = "1.1.6" 
#serde_derive ="1.0.130"
serde = { version = "1.0", features = ["derive"]}

#eoalib = {path = "../eoalib/"}